Chapter 6 in process: Constructors and Overriding Derived Properties

--- a/the_secret_life_of_objects.html
+++ b/the_secret_life_of_objects.html
@@ -53,6 +53,51 @@
   killerRabbit.speak("SKREEEEE!!!");
   // → The killer rabbit says 'SKREEEEE!!!'
 
+  // --------------------------------------------------------------------------
+  // Constructors
+  // ------------
+
+  function Rabbit(type) {
+    this.type = type;
+  };
+
+  var killerRabbit = new Rabbit("killer");
+  var blackRabbit = new Rabbit("black");
+  console.log(blackRabbit.type);
+  // → black
+
+  Rabbit.prototype.speak = function(line) {
+    console.log("The " + this.type + " rabbit says '" + line + "'");
+  };
+  blackRabbit.speak("Doom...");
+  // → The black rabbit says 'Doom...'
+
+  // --------------------------------------------------------------------------
+  // Overriding Derived Properties
+  // -----------------------------
+
+  Rabbit.prototype.teeth = "small";
+  console.log(killerRabbit.teeth);
+  // → small
+  killerRabbit.teeth = "long, sharp, and bloody";
+  console.log(killerRabbit.teeth);
+  // → long, sharp, and bloody
+  console.log(blackRabbit.teeth);
+  // → small
+  console.log(Rabbit.prototype.teeth);
+  // → small
+
+  // Calling toString() on an array gives a result similar to calling .join(",")
+  // on it - it puts commas between the values in the array. But directly calling
+  // Object.prototype.toString with an array produces a different string.
+
+  console.log(Array.prototype.toString == Object.prototype.toString);
+  // → false
+  console.log([1, 2].toString());
+  // → 1, 2
+
+  console.log(Object.prototype.toString.call([1, 2]));
+  // → [object Array]
 
 </script>
 </body>
