Create methods to lay out a table that looks organized and add source data mountains to complete the table practice

--- a/the_secret_life_of_objects.html
+++ b/the_secret_life_of_objects.html
@@ -3,6 +3,7 @@
   <title>The Secret Life of Objects</title>
 </head>
 <body>
+<script src="mountains.js"></script>
 <script type="text/javascript">
 
   // THE SECRET LIFE OF OBJECTS
@@ -218,20 +219,110 @@
 
   // Computes arrays of minimum column widths and row heights for a grid of cells.
   function rowHeights(rows) {
+    // 'map' applies 'reduce' in all rows of the rows array.
     return rows.map(function(row) {
+      // 'reduce' computes the maximum height of an array of cells
       return row.reduce(function(max, cell) {
         return Math.max(max, cell.minHeight());
       }, 0);
     });
   };
+  // * map, forEach, filter and so on, passes a 2nd argument to the function it
+  // is given: the index of the current element.
 
+  // the outer array is an array of rows, not of columns.
   function colWidths(rows) {
+    // By mapping over the elements of the first row and only using the mapping 
+    // function’s second argument, colWidths builds up an array with one element 
+    // for every column index.
     return rows[0].map(function(_, i) {
+      // 'reduce' runs over the outer rows array for each index and picks out the
+      // width of the widest cell at that index.
       return rows.reduce(function(max, row) {
         return Math.max(max, row[i].minWidth());
       }, 0);
     });
   };
+
+  function drawTable(rows) {
+    var heights = rowHeights(rows);
+    var widths = colWidths(rows);
+    // 'drawLine' extracts lines that should appear next to each other from an
+    // array of blocks and joins them with a space character to create a one-
+    // character gap between the table’s columns
+    function drawLine(blocks, lineNo) {
+      return blocks.map(function(block) {
+        return block[lineNo];
+      }).join(" ");
+    };
+    // 'drawRow' draws all rows and joins them together with newline characters
+    function drawRow(row, rowNum) {
+      // first converts the cell objects in the row to blocks, which are arrays 
+      // of strings representing the content of the cells, split by line. 
+      var blocks = row.map(function(cell, colNum) {
+        return cell.draw(widths[colNum], heights[rowNum]);
+      });
+      // this 'map' collect a line that spans the full width of the table
+      return blocks[0].map(function(_, lineNo) {
+        return drawLine(blocks, lineNo);
+      }).join("\n");
+    };
+    // These lines are then joined with newline characters to provide the whole 
+    // row as drawRow’s return value
+    return rows.map(drawRow).join("\n");
+  };
+  // 'repeat' builds a string whose value is the string argument repeated times 
+  // number of times
+  function repeat(string, times) {
+    var result = "";
+    for (var i = 0; i < times; i += 1) {
+      result += string;
+    }
+    return result;
+  };
+
+  function TextCell(text) {
+    this.text = text.split("\n");
+  };
+  TextCell.prototype.minWidth = function() {
+    return this.text.reduce(function(width, line) {
+      return Math.max(width, line.length);
+    }, 0);
+  };
+  TextCell.prototype.minHeight = function() {
+    return this.text.length;
+  };
+  // 'draw()' uses 'repeat()' to add padding to lines so that they all have the
+  // required length.
+  TextCell.prototype.draw = function(width, height) {
+    var result = [];
+    for (var i = 0; i < height; i += 1) {
+      var line = this.text[i] || "";
+      result.push(line + repeat(" ", width - line.length));
+    }
+    return result;
+  };
+
+  // Let's build a 5x5 checkerboard:
+  var rows = [];
+  for (var i = 0; i < 5; i += 1) {
+    var row = [];
+    for (var j = 0; j < 5; j += 1) {
+      if ((j + i) % 2 == 0) {
+        row.push(new TextCell("##"));
+      } else {
+        row.push(new TextCell("  "));
+      }
+    }
+    rows.push(row);
+  };
+  console.log(drawTable(rows));
+  //  ##    ##    ##
+  //    ##    ##   
+  // ##    ##    ##
+  //    ##    ##   
+  // ##    ##    ##
+
 
 </script>
 </body>
