--- a/the_secret_life_of_objects.html
+++ b/the_secret_life_of_objects.html
@@ -197,17 +197,7 @@
   // ------------
 
   // Laying out a Table
-
-
-  // name         height country
-  // ------------ ------ -------------
-  // Kilimanjaro    5895 Tanzania
-  // Everest        8848 Nepal
-  // Mount Fuji     3776 Japan
-  // Mont Blanc     4808 Italy/France
-  // Vaalserberg     323 Netherlands
-  // Denali         6168 United States
-  // Popocatepetl   5465 Mexico
+  // ------------------
 
   // minHeight()         returns a number indicating the minimum height this cell 
   //                     requires (in lines).
@@ -317,11 +307,270 @@
     rows.push(row);
   };
   console.log(drawTable(rows));
-  //  ##    ##    ##
-  //    ##    ##   
-  // ##    ##    ##
-  //    ##    ##   
-  // ##    ##    ##
+  // → ##    ##    ##
+  // →    ##    ##   
+  // → ##    ##    ##
+  // →    ##    ##   
+  // → ##    ##    ##
+
+  // to highlight the top row (column names) by underlining the cells with dashes
+  function UnderlinedCell(inner) {
+    this.inner = inner;
+  };
+  UnderlinedCell.prototype.minWidth = function() {
+    return this.inner.minWidth();
+  };
+  UnderlinedCell.prototype.minHeight = function() {
+    return this.inner.minHeight() + 1;
+  };
+  UnderlinedCell.prototype.draw = function(width, height) {
+    return this.inner.draw(width, height - 1).concat([repeat("-", width)]);
+  };
+
+  // we can now write a function that builds up a grid of cells from our data set
+  // function dataTable(data) {
+  //   // Object.keys() returns an array of property names in an object
+  //   var keys = Object.keys(data[0]);
+  //   var headers = keys.map(function(name) {
+  //     return new UnderlinedCell(new TextCell(name));
+  //   });
+  //   var body = data.map(function(row) {
+  //     return keys.map(function(name) {
+  //       return new TextCell(String(row[name]));
+  //     });
+  //   });
+  //   return [headers].concat(body);
+  // };
+  // console.log(drawTable(dataTable(MOUNTAINS)));
+  
+
+  // --------------------------------------------------------------------------
+  // Getters and Setters
+  // -------------------
+
+  var pile = {
+    elements: ["eggshell", "orange peel", "worm"],
+    get height() {
+      return this.elements.length;
+    },
+    set height(value) {
+      console.log("Ignoring attempt to set height to", value);
+    }
+  };
+  console.log(pile.height);
+  // → 3
+
+  pile.height = 100;
+  // → Ignoring attempt to set height to 100
+
+
+  // You can also add such a property to an existing object, for example a prototype:
+  Object.defineProperty(TextCell.prototype, "heightProp", {
+    get: function() { return this.text.length; }
+  });
+  // When a getter but no setter is defined, writing to the property is simply ignored.
+  var cell = new TextCell("no\nway");
+  console.log(cell.heightProp);
+  // → 2
+  cell.heightProp = 100;
+  console.log(cell.heightProp);
+  // → 2
+  
+  // --------------------------------------------------------------------------
+  // Inheritance
+  // -----------
+
+  function RTextCell(text) {
+    TextCell.call(this, text);
+  }
+  RTextCell.prototype = Object.create(TextCell.prototype);
+  RTextCell.prototype.draw = function(width, height) {
+    var result = [];
+    for (var i = 0; i < height; i += 1) {
+      var line = this.text[i] || "";
+      result.push(repeat(" ", width - line.length) + line);
+    }
+    return result;
+  };
+
+
+  function dataTable(data) {
+    var keys = Object.keys(data[0]);
+    var headers = keys.map(function(name) {
+      return new UnderlinedCell(new TextCell(name));
+    });
+    var body = data.map(function(row) {
+      return keys.map(function(name) {
+        var value = row[name];
+        // This was changed:
+        if (typeof value == "number") {
+          return new RTextCell(String(value));
+        }
+        else {
+          return new TextCell(String(value));
+        }
+      });
+    });
+    return [headers].concat(body);
+  }
+  console.log(drawTable(dataTable(MOUNTAINS)));
+  // → name         height country
+  // → ------------ ------ -------------
+  // → Kilimanjaro    5895 Tanzania
+  // → Everest        8848 Nepal
+  // → Mount Fuji     3776 Japan
+  // → Mont Blanc     4808 Italy/France
+  // → Vaalserberg     323 Netherlands
+  // → Denali         6168 United States
+  // → Popocatepetl   5465 Mexico
+
+  // --------------------------------------------------------------------------
+
+  // ========= //
+  // EXERCISES //
+  // ========= //
+
+  // --------------------------------------------------------------------------
+  // 1. A Vector Type
+  // ----------------
+  /*
+  Write a constructor Vector that represents a vector in two-dimensional space. 
+  It takes x and y parameters (numbers), which it should save to properties of 
+  the same name. Give the Vector prototype two methods, plus and minus, that take 
+  another vector as a parameter and return a new vector that has the sum or 
+  difference of the two vectors’ (the one in this and the parameter) x and y values.
+  Add a getter property length to the prototype that computes the length of the 
+  vector—that is, the distance of the point (x, y) from the origin (0, 0).
+  */
+
+  function Vector(x, y) {
+    this.x = x;
+    this.y = y;
+  };
+
+  Vector.prototype.plus = function(other) {
+    return new Vector(this.x + other.x, this.y + other.y);
+  };
+
+  Vector.prototype.minus = function(other) {
+    return new Vector(this.x - other.x, this.y - other.y);
+  };
+
+  Object.defineProperty(Vector.prototype, "length", {
+    get: function() {
+      return Math.sqrt(this.x * this.x + this.y * this.y);
+    }
+  });
+  console.log(new Vector(1, 2).plus(new Vector(2, 3)));
+  // → Vector{x: 3, y: 5}
+  console.log(new Vector(1, 2).minus(new Vector(2, 3)));
+  // → Vector{x: -1, y: -1}
+  console.log(new Vector(3, 4).length);
+  // → 5
+  
+  // --------------------------------------------------------------------------
+  // 2. Another cell
+  // ----------------
+
+  /*
+  Implement a cell type named StretchCell(inner, width, height) that conforms to 
+  the table cell interface described earlier in the chapter. It should wrap another 
+  cell (like UnderlinedCell does) and ensure that the resulting cell has at least 
+  the given width and height, even if the inner cell would naturally be smaller.
+  */
+  function StretchCell(inner, width, height) {
+    this.inner = inner;
+    this.width = width;
+    this.height = height;
+  };
+  StretchCell.prototype.minWidth = function() {
+    return Math.max(this.width, this.inner.minWidth());
+  };
+  StretchCell.prototype.minHeight = function() {
+    return Math.max(this.height, this.inner.minHeight());
+  };
+  StretchCell.prototype.draw = function(width, height) {
+    return this.inner.draw(width, height);
+  };
+  var sc = new StretchCell(new TextCell("abc"), 1, 2);
+  console.log(sc.minWidth());
+  // → 3
+  console.log(sc.minHeight());
+  // → 2
+  console.log(sc.draw(3, 2));
+  // → ["abc", "   "]
+
+  // --------------------------------------------------------------------------
+  // 3. Sequence Interface
+  // ---------------------
+  /*
+  Design an interface that abstracts iteration over a collection of values. An 
+  object that provides this interface represents a sequence, and the interface 
+  must somehow make it possible for code that uses such an object to iterate over 
+  the sequence, looking at the element values it is made up of and having some way 
+  to find out when the end of the sequence is reached.
+
+  When you have specified your interface, try to write a function logFive that 
+  takes a sequence object and calls console.log on its first five elements—or 
+  fewer, if the sequence has fewer than five elements.
+
+  Then implement an object type ArraySeq that wraps an array and allows iteration 
+  over the array using the interface you designed. Implement another object type 
+  RangeSeq that iterates over a range of integers (taking from and to arguments 
+  to its constructor) instead.
+  */
+  function logFive(sequence) {
+    for (var i = 0; i < 5; i += 1) {
+      if (!sequence.next()) {
+        break;
+      }
+      console.log(sequence.current());
+    }
+  };
+  
+  function ArraySeq(array) {
+    this.array = array;
+    this.position = -1;
+  };
+
+  ArraySeq.prototype.next = function() {
+    if (this.position >= this.array.length - 1) {
+      return false;
+    }
+    this.position += 1;
+    return true;
+  };
+
+  ArraySeq.prototype.current = function() {
+    return this.array[this.position];
+  };
+  
+  function RangeSeq(start, end) {
+    this.position = start - 1;
+    this.end = end;
+  };
+
+  RangeSeq.prototype.next = function() {
+    if (this.position >= this.end) {
+      return false;
+    }
+    this.position += 1;
+    return true;
+  };
+
+  RangeSeq.prototype.current = function() {
+    return this.position;
+  };
+  logFive(new ArraySeq([1, 2]));
+  // → 1
+  // → 2
+  logFive(new RangeSeq(100, 1000));
+  // → 100
+  // → 101
+  // → 102
+  // → 103
+  // → 104
+
 
 
 </script>
